tests/src/frontend/typechecking/invalid/general_constraint_clause_7.sk
base class P<+T>
base class L<+T> extends P<T>
base class R<+T> extends P<T>

class Tester<T>() {
  fun no<U>[L<T>: R<U>](x: T): U {
    x
  }
}
